feat: FastAPI app factory, middleware, health endpoint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,15 @@ readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.12"
 dependencies = [
+    "asyncpg>=0.31.0",
+    "fastapi>=0.129.0",
+    "httpx>=0.28.1",
+    "prometheus-client>=0.24.1",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.13.0",
+    "redis[hiredis]>=7.2.0",
     "structlog>=25.5.0",
+    "uvicorn[standard]>=0.41.0",
 ]
 
 [build-system]
@@ -36,6 +42,9 @@ select = [
     "RUF", # ruff-specific
 ]
 
+[tool.ruff.lint.flake8-bugbear]
+extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]
+
 [tool.ruff.lint.isort]
 known-first-party = ["src"]
 
@@ -50,6 +59,10 @@ plugins = ["pydantic.mypy"]
 init_forbid_extra = true
 init_typed = true
 warn_required_dynamic_aliases = true
+
+[[tool.mypy.overrides]]
+module = "asyncpg.*"
+ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = "tests.*"
