--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ module = "asyncpg.*"
 ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
-module = "tests.*"
+module = ["tests", "tests.*", "tests.unit.*", "tests.integration.*"]
 disallow_untyped_defs = false
 
 [tool.pytest.ini_options]
@@ -77,5 +77,8 @@ markers = ["integration: marks tests as integration tests"]
 [dependency-groups]
 dev = [
     "mypy>=1.19.1",
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
     "ruff>=0.15.1",
 ]
