--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ ignore_missing_imports = true
 [[tool.mypy.overrides]]
 module = ["tests", "tests.*", "tests.unit.*", "tests.integration.*"]
 disallow_untyped_defs = false
+disallow_incomplete_defs = false
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
