--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "redis[hiredis]>=7.2.0",
     "sqlalchemy[asyncio]>=2.0.46",
     "structlog>=25.5.0",
+    "tenacity>=9.1.4",
     "uvicorn[standard]>=0.41.0",
 ]
 
@@ -29,6 +30,7 @@ packages = ["src"]
 [tool.ruff]
 target-version = "py312"
 line-length = 100
+extend-exclude = ["src/db/migrations/versions"]
 
 [tool.ruff.lint]
 select = [
