--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ license = { text = "MIT" }
 requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.18.4",
+    "anthropic>=0.80.0",
     "asyncpg>=0.31.0",
     "fastapi>=0.129.0",
     "httpx>=0.28.1",
+    "openai>=2.21.0",
     "prometheus-client>=0.24.1",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.13.0",
