feat: search layer — embeddings, vector search with MMR, search API (267 tests)
Add semantic search over extracted holdings via Qdrant:
- EmbeddingService: async OpenAI text-embedding-3-large with LRU cache + retry
- VectorSearchService: Qdrant collection management, similarity + hand-rolled MMR
  reranking with numpy pairwise cosine, SearchMetrics computation
- POST /api/v1/search endpoint with filters (court_level, court_ids, dates)
- 22 unit tests (MMR correctness, cosine sim, diversity, filter construction)
- 9 integration tests (search API with mocked Qdrant)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,12 @@ dependencies = [
     "asyncpg>=0.31.0",
     "fastapi>=0.129.0",
     "httpx>=0.28.1",
+    "numpy>=2.4.2",
     "openai>=2.21.0",
     "prometheus-client>=0.24.1",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.13.0",
+    "qdrant-client>=1.16.2",
     "redis[hiredis]>=7.2.0",
     "sqlalchemy[asyncio]>=2.0.46",
     "structlog>=25.5.0",
